--- a/animeApp/src/app/web/components/animes-list/animes-list.component.html
+++ b/animeApp/src/app/web/components/animes-list/animes-list.component.html
@@ -1,32 +1,43 @@
-<div class="col-md-4" *ngFor="let anime of animes">
-  <div class="card text-center">
-    <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
-      {{anime.title}}
-      <button class="btn btn-danger" (click)="deleteGame(anime.key)">
-        <i class="far fa-trash-alt"></i>
-      </button>
+<mat-card class="container p-4">
+  <div *ngIf="animes == null" align="center">
+    <img src="assets/load.gif"width="900" height="600">
+  </div>
+  <div *ngIf="animes!=null" >
+    <div *ngIf="animesForUser === null" align="center">
+      <h1>No has cargado nada aun...</h1>
+      <img src="assets/nosientodolor.gif"width="900" height="600">
     </div>
-    <img [src]="anime.image === '' ? '/assets/noimage.png' : anime.image" alt="No Image" class="card-img-top">
-    <div class="card-body">
-      <p>{{anime.estado}}</p>
-      <p *ngIf="anime.estado == 'visto hasta' || anime.estado == 'abandone' ">Capitulo: {{anime.ultimoCapitulo}}</p>
-      <p>Descripcion: {{anime.description}}</p>
-      <p class="clasificacion" >
-        <input id="radio1" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="5" disabled><!--
-        --><label for="radio1">★</label><!--
-        --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="4" disabled><!--
-        --><label for="radio2">★</label><!--
-        --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="3"disabled><!--
-        --><label for="radio3">★</label><!--
-        --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="2" disabled><!--
-        --><label for="radio4">★</label><!--
-        --><input id="radio5" type="radio" [(ngModel)]="anime.calificacion" name="estrellas" value="1"disabled><!--
-        --><label for="radio5">★</label>
-      </p>
-      <p>Created At {{anime.created_at}}</p>
-      <a [routerLink]="['/anime/', anime.key]" class="btn btn-info btn-block">
-        EDIT ANIME
-      </a>
+    <div class="col-md-4" *ngFor="let anime of animesForUser">{{loadAnimes()}}
+      <div class="card text-center">
+        <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
+          {{anime.title}}
+          <button class="btn btn-danger" (click)="deleteAnime(anime.key)">
+            <i class="far fa-trash-alt"></i>
+          </button>
+        </div>
+        <img [src]="anime.image === '' ? '/assets/noimage.png' : anime.image" alt="No Image" class="card-img-top">
+        <div class="card-body">
+          <p>{{anime.estado}}</p>
+          <p *ngIf="anime.estado == 'visto hasta' || anime.estado == 'abandone' ">Capitulo: {{anime.ultimoCapitulo}}</p>
+          <p>Descripcion: {{anime.description}}</p>
+          <p class="clasificacion" >
+            <input id="radio1" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="5" disabled><!--
+            --><label for="radio1">★</label><!--
+            --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="4" disabled><!--
+            --><label for="radio2">★</label><!--
+            --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="3"disabled><!--
+            --><label for="radio3">★</label><!--
+            --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="2" disabled><!--
+            --><label for="radio4">★</label><!--
+            --><input id="radio5" type="radio" [(ngModel)]="anime.calificacion" name="estrellas" value="1"disabled><!--
+            --><label for="radio5">★</label>
+          </p>
+          <p>Created At {{anime.created_at}}</p>
+          <a [routerLink]="['/anime/', anime.key]" class="btn btn-info btn-block">
+            EDIT ANIME
+          </a>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</mat-card>
