--- a/animeApp/src/app/web/components/manga-list/manga-list.component.html
+++ b/animeApp/src/app/web/components/manga-list/manga-list.component.html
@@ -1,32 +1,43 @@
-<div class="col-md-4" *ngFor="let manga of mangas">
-  <div class="card text-center">
-    <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
-      {{manga.title}}
-      <button class="btn btn-danger" (click)="deleteManga(manga.key)">
-        <i class="far fa-trash-alt"></i>
-      </button>
+<mat-card class="container p-4">
+  <div *ngIf="mangas == null" align="center">
+    <img src="assets/un-libro-booktag.gif"width="900" height="600">
+  </div>
+  <div *ngIf="mangas!=null" >
+    <div *ngIf="mangasForUser === null" align="center">
+      <h1>No has cargado nada aun...</h1>
+      <img src="assets/nomanga.gif"width="900" height="600">
     </div>
-    <img [src]="manga.image === '' ? '/assets/noimage.png' : manga.image" alt="No Image" class="card-img-top">
-    <div class="card-body">
-      <p>{{manga.estado}}</p>
-      <p *ngIf="manga.estado == 'visto hasta' || manga.estado == 'abandone' ">Capitulo: {{manga.ultimoCapitulo}}</p>
-      <p>Descripcion: {{manga.description}}</p>
-      <p class="clasificacion" >
-        <input id="radio1" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="5" disabled><!--
-        --><label for="radio1">★</label><!--
-        --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="4" disabled><!--
-        --><label for="radio2">★</label><!--
-        --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="3"disabled><!--
-        --><label for="radio3">★</label><!--
-        --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="2" disabled><!--
-        --><label for="radio4">★</label><!--
-        --><input id="radio5" type="radio" [(ngModel)]="manga.calificacion" name="estrellas" value="1"disabled><!--
-        --><label for="radio5">★</label>
-      </p>
-      <p>Created At {{manga.created_at}}</p>
-      <a [routerLink]="['/manga/', manga.key]" class="btn btn-info btn-block">
-        EDIT MANGA
-      </a>
+    <div class="col-md-4" *ngFor="let manga of mangasForUser">{{loadMangas()}}
+      <div class="card text-center">
+        <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
+          {{manga.title}}
+          <button class="btn btn-danger" (click)="deleteManga(manga.key)">
+            <i class="far fa-trash-alt"></i>
+          </button>
+        </div>
+        <img [src]="manga.image === '' ? '/assets/noimage.png' : manga.image" alt="No Image" class="card-img-top">
+        <div class="card-body">
+          <p>{{manga.estado}}</p>
+          <p *ngIf="manga.estado == 'visto hasta' || manga.estado == 'abandone' ">Capitulo: {{manga.ultimoCapitulo}}</p>
+          <p>Descripcion: {{manga.description}}</p>
+          <p class="clasificacion" >
+            <input id="radio1" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="5" disabled><!--
+            --><label for="radio1">★</label><!--
+            --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="4" disabled><!--
+            --><label for="radio2">★</label><!--
+            --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="3"disabled><!--
+            --><label for="radio3">★</label><!--
+            --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="2" disabled><!--
+            --><label for="radio4">★</label><!--
+            --><input id="radio5" type="radio" [(ngModel)]="manga.calificacion" name="estrellas" value="1"disabled><!--
+            --><label for="radio5">★</label>
+          </p>
+          <p>Created At {{manga.created_at}}</p>
+          <a [routerLink]="['/manga/', manga.key]" class="btn btn-info btn-block">
+            EDIT MANGA
+          </a>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</mat-card>
