--- a/animeApp/src/app/web/components/all-list/all-list.component.html
+++ b/animeApp/src/app/web/components/all-list/all-list.component.html
@@ -11,7 +11,7 @@
 <div *ngIf="tipo=='anime'" >
   <div *ngIf="animes!=null" align="center"  >
     <h1> Aun no cargaste nada...</h1>
-      <img src="assets/nosientodolor.gif" width="900" height="600">
+      <img src="assets/watamole.gif" width="900" height="600">
     </div>
   <div *ngFor="let anime of animes"  class="col-md-4">
     <div class="card text-center">{{loadUsername(anime)}}
