--- a/animeApp/src/app/web/web-admin.component.html
+++ b/animeApp/src/app/web/web-admin.component.html
@@ -9,7 +9,7 @@
       <span class="menu-spacer"></span>
       <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-
+        <a  mat-button href="/AllForOne" routerLinkActive="active"><i class="fas fa-kiss-wink-heart"></i> ALL FOR ONE</a>
         <a  mat-button href="/animes" routerLinkActive="active"><i class="fas fa-kiss-wink-heart"></i> ANIMES</a>
         <a   mat-button href="/anime/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD ANIMES</a>
           <a  mat-button href="/mangas" routerLinkActive="active"><i class="fas fa-book"></i> MANGAS</a>
@@ -22,6 +22,7 @@
   <mat-sidenav-container #snav mode="side" fxFlexFill >
     <mat-sidenav #sidenav>
       <mat-nav-list>
+        <a class="nav-link " mat-list-item routerLink="/AllForOne" routerLinkActive="active"><i class="fas fa-kiss-wink-heart"></i> ALL FOR ONE</a>
         <a class="nav-link " mat-list-item routerLink="/animes" routerLinkActive="active"><i class="fas fa-kiss-wink-heart"></i> ANIMES</a>
         <a class="nav-link" mat-list-item routerLink="/anime/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD  ANIMES</a>
           <a class="nav-link" mat-list-item routerLink="/mangas" routerLinkActive="active"><i class="fas fa-book"></i> MANGAS</a>
