--- a/animeApp/src/app/web/components/animes-list/animes-list.component.html
+++ b/animeApp/src/app/web/components/animes-list/animes-list.component.html
@@ -2,12 +2,13 @@
   <div *ngIf="animes == null" align="center">
     <img src="assets/load.gif"width="900" height="600">
   </div>
-  <div *ngIf="animes!=null" >
-    <div *ngIf="animesForUser === null" align="center">
+  <div *ngIf="animes!=null" >{{loadAnimes()}}
+    <div *ngIf="animesForUser.length===0" align="center">
       <h1>No has cargado nada aun...</h1>
       <img src="assets/nosientodolor.gif"width="900" height="600">
     </div>
-    <div class="col-md-4" *ngFor="let anime of animesForUser">{{loadAnimes()}}
+    <div *ngIf="animesForUser!=null">
+    <div class="col-md-4" *ngFor="let anime of animesForUser">
       <div class="card text-center">
         <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
           {{anime.title}}
@@ -39,5 +40,6 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 </mat-card>
