--- a/animeApp/src/app/components/page-not-found/page-not-found.component.html
+++ b/animeApp/src/app/components/page-not-found/page-not-found.component.html
@@ -1,8 +1,9 @@
-<mat-card><div>
-      Esta página no existe. Volver a
-      <a routerLink="/home">inicio</a>
-
-
+<mat-card class=container>
+  <div >
+      <h2 >Esta página no existe.</h2>
+      <h2 >Volver al <a  routerLink="/AllForOne">"Inicio"</a></h2>
     </div>
-    <img src="../../assets/chuck404.jpg"/>
+    <img src="assets/chuck404.jpg"  align="center" />
+
+
   </mat-card>
