--- a/animeApp/src/app/web/components/animes-list/animes-list.component.css
+++ b/animeApp/src/app/web/components/animes-list/animes-list.component.css
@@ -33,3 +33,30 @@ label:hover ~ label {
 input[type="radio"]:checked ~ label {
   color: orange;
 }
+.box {
+  width: 100%;
+
+  height: 100%;
+
+  display: flex;
+
+  flex-direction: row;
+
+}
+
+
+@media all and (max-width: 1000px) {
+  .box {
+    width: 100%;
+
+    height: 100%;
+
+    display: flex;
+
+    flex-direction: column;
+
+    justify-content: space-between;
+  }
+
+
+}
