--- a/animeApp/src/app/web/components/manga-list/manga-list.component.html
+++ b/animeApp/src/app/web/components/manga-list/manga-list.component.html
@@ -1,11 +1,11 @@
 <mat-card class="container p-4">
   <div *ngIf="mangas == null" align="center">
-    <img src="assets/un-libro-booktag.gif"width="900" height="600">
+    <img class="box" src="assets/un-libro-booktag.gif">
   </div>
   <div *ngIf="mangas!=null" >{{loadMangas()}}
     <div *ngIf="mangas.length === 0" align="center">
       <h1>No has cargado nada aun...</h1>
-      <img src="assets/nomanga.gif"width="900" height="600">
+      <img class="box" src="assets/nomanga.gif">
     </div>
     <div *ngIf="mangasForUser!=null">
     <div class="col-md-4" *ngFor="let manga of mangasForUser">
@@ -16,7 +16,7 @@
             <i class="far fa-trash-alt"></i>
           </button>
         </div>
-        <img [src]="manga.image === '' ? '/assets/noimage.png' : manga.image" alt="No Image" class="card-img-top">
+        <img  [src]="manga.image === '' ? '/assets/noimage.png' : manga.image" alt="No Image" class="card-img-top">
         <div class="card-body">
           <p>{{manga.estado}}</p>
           <p *ngIf="manga.estado == 'visto hasta' || manga.estado == 'abandone' ">Capitulo: {{manga.ultimoCapitulo}}</p>
