--- a/animeApp/src/app/web/components/all-list/all-list.component.html
+++ b/animeApp/src/app/web/components/all-list/all-list.component.html
@@ -1,21 +1,30 @@
-<mat-card class="container p-4">
+<mat-card  class="container-fluid">
   <div class="form-group">
     <label>CATEGORIA</label>
     <select name="TIPO" [(ngModel)]="tipo" placeholder="TIPO" class="form-control" autofocus>
-      <option value='manga'>MANGA</option>
-      <option value='anime'>ANIME</option>
+      <option value='mangas'>MANGA</option>
+      <option value='animes'>ANIME</option>
+    </select>
+  </div>
+  <div class="form-group" *ngIf="animes!=null && mangas!=null">
+    <label>VER POR USUARIO</label>
+    <p *ngIf="tipo=='mangas'">{{getUSers(mangas)}}</p>
+    <p *ngIf="tipo=='animes'">{{getUSers(animes)}}</p>
+    <select name="USERS" [(ngModel)]="userSelect" placeholder="USUARIO" class="form-control" autofocus>
+      <option selected></option>
+      <option *ngFor="let user of usuarios">{{user}}</option>
     </select>
   </div>
   <div *ngIf="tipo==''" align="center">
     <img class="box" src="assets/select.gif">
   </div>
-  <div *ngIf="tipo=='anime'" >
+  <div *ngIf="tipo=='animes'" >
     <div *ngIf="animes.length===0" align="center"  >
       <h1> Aun no cargaste nada...</h1>
         <img class="box" src="assets/watamole.gif" >
       </div>
-    <div *ngIf="animes!=null"  >
-    <div *ngFor="let anime of animes"  class="col-md-4">
+    <div *ngIf="animes!=null && userSelect==''" class="row">
+    <div *ngFor="let anime of animes"  class="col-md-3" >
       <div class="card text-center">{{loadUsername(anime)}}
         <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
           {{anime.title}}
@@ -47,12 +56,12 @@
     </div>
     </div>
   </div>
-  <div *ngIf="tipo=='manga'"   >
+  <div *ngIf="tipo=='mangas'" >
     <div *ngIf="mangas.length===0" align="center">
       <h1> Aun no cargaste nada...</h1>
         <img class="box" src="assets/original.gif">
       </div>
-      <div *ngIf="mangas!=null">
+      <div *ngIf="mangas!=null  && userSelect==''" class="row">
         <div class="col-md-4" *ngFor="let manga of mangas">
           <div class="card text-center">{{loadUsername(manga)}}
             <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
@@ -85,4 +94,43 @@
         </div>
       </div>
     </div>
+
+    <div *ngIf="userSelect!=''" >{{getListForUser()}}
+      <div *ngIf=" list.length===0" align="center">
+        <h1> Aun no cargaste nada...</h1>
+          <img class="box" src="assets/original.gif">
+        </div>
+        <div *ngIf="list!=null" class="row">
+          <div class="col-md-4" *ngFor="let manga of  list">
+            <div class="card text-center">{{loadUsername(manga)}}
+              <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
+                {{manga.title}}
+              </div>
+              <img [src]="manga.image === '' ? '/assets/noimage.png' : manga.image" alt="No Image" class="card-img-top">
+              <div class="card-body">
+                <p>{{manga.estado}}</p>
+                <p *ngIf="manga.estado == 'visto hasta' || manga.estado == 'abandone' ">Capitulo: {{manga.ultimoCapitulo}}</p>
+                <p>Descripcion: {{manga.description}}</p>
+                <p class="clasificacion" >
+                  <input id="radio1" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="5" disabled><!--
+                  --><label for="radio1">★</label><!--
+                  --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="4" disabled><!--
+                  --><label for="radio2">★</label><!--
+                  --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="3"disabled><!--
+                  --><label for="radio3">★</label><!--
+                  --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="2" disabled><!--
+                  --><label for="radio4">★</label><!--
+                  --><input id="radio5" type="radio" [(ngModel)]="manga.calificacion" name="estrellas" value="1"disabled><!--
+                  --><label for="radio5">★</label>
+                </p>
+                <p>LO AÑADIO: {{username}}</p>
+                <p>Created At {{manga.created_at}}</p>
+                <a [routerLink]="['/manga/', manga.key]" class="btn btn-info btn-block">
+                  EDIT MANGA
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 </mat-card>
