--- a/animeApp/src/app/web/components/all-list/all-list.component.html
+++ b/animeApp/src/app/web/components/all-list/all-list.component.html
@@ -34,23 +34,23 @@
           <p>{{anime.estado}}</p>
           <p *ngIf="anime.estado == 'visto hasta' || anime.estado == 'abandone' ">Capitulo: {{anime.ultimoCapitulo}}</p>
           <p>Descripcion: {{anime.description}}</p>
-          <p class="clasificacion" >
-            <input id="radio1" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="5" disabled><!--
-            --><label for="radio1">★</label><!--
-            --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="4" disabled><!--
-            --><label for="radio2">★</label><!--
-            --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="3"disabled><!--
-            --><label for="radio3">★</label><!--
-            --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="2" disabled><!--
-            --><label for="radio4">★</label><!--
-            --><input id="radio5" type="radio" [(ngModel)]="anime.calificacion" name="estrellas" value="1"disabled><!--
-            --><label for="radio5">★</label>
+          <p class="clasificacion" *ngIf="anime.calificacion == 5">
+            <label name="estrellas" class=estrella>★★★★★</label>
+          </p>
+          <p class="clasificacion" *ngIf="anime.calificacion == 4">
+            <label name="estrellas" class=estrella>★★★★</label>
+          </p>
+          <p class="clasificacion" *ngIf="anime.calificacion == 3">
+            <label name="estrellas" class=estrella>★★★</label>
+          </p>
+          <p class="clasificacion" *ngIf="anime.calificacion == 2">
+            <label name="estrellas" class=estrella>★★</label>
+          </p>
+          <p class="clasificacion" *ngIf="anime.calificacion == 1">
+            <label name="estrellas" class=estrella>★</label>
           </p>
           <p>LO AÑADIO: {{username}}</p>
           <p>Created At {{anime.created_at}}</p>
-          <a [routerLink]="['/anime/', anime.key]" class="btn btn-info btn-block">
-            EDIT ANIME
-          </a>
         </div>
       </div>
     </div>
@@ -72,23 +72,23 @@
               <p>{{manga.estado}}</p>
               <p *ngIf="manga.estado == 'visto hasta' || manga.estado == 'abandone' ">Capitulo: {{manga.ultimoCapitulo}}</p>
               <p>Descripcion: {{manga.description}}</p>
-              <p class="clasificacion" >
-                <input id="radio1" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="5" disabled><!--
-                --><label for="radio1">★</label><!--
-                --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="4" disabled><!--
-                --><label for="radio2">★</label><!--
-                --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="3"disabled><!--
-                --><label for="radio3">★</label><!--
-                --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="2" disabled><!--
-                --><label for="radio4">★</label><!--
-                --><input id="radio5" type="radio" [(ngModel)]="manga.calificacion" name="estrellas" value="1"disabled><!--
-                --><label for="radio5">★</label>
+              <p class="clasificacion" *ngIf="manga.calificacion == 5">
+                <label name="estrellas" class=estrella>★★★★★</label>
+              </p>
+              <p class="clasificacion" *ngIf="manga.calificacion == 4">
+                <label name="estrellas" class=estrella>★★★★</label>
+              </p>
+              <p class="clasificacion" *ngIf="manga.calificacion == 3">
+                <label name="estrellas" class=estrella>★★★</label>
+              </p>
+              <p class="clasificacion" *ngIf="manga.calificacion == 2">
+                <label name="estrellas" class=estrella>★★</label>
+              </p>
+              <p class="clasificacion" *ngIf="manga.calificacion == 1">
+                <label name="estrellas" class=estrella>★</label>
               </p>
               <p>LO AÑADIO: {{username}}</p>
               <p>Created At {{manga.created_at}}</p>
-              <a [routerLink]="['/manga/', manga.key]" class="btn btn-info btn-block">
-                EDIT MANGA
-              </a>
             </div>
           </div>
         </div>
@@ -101,33 +101,34 @@
           <img class="box" src="assets/original.gif">
         </div>
         <div *ngIf="list!=null" class="row">
-          <div class="col-md-4" *ngFor="let manga of  list">
-            <div class="card text-center">{{loadUsername(manga)}}
+          <div class="col-md-4" *ngFor="let other of  list">
+            <div class="card text-center">{{loadUsername(other)}}
               <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
-                {{manga.title}}
+                {{other.title}}
               </div>
-              <img [src]="manga.image === '' ? '/assets/noimage.png' : manga.image" alt="No Image" class="card-img-top">
+              <img [src]="other.image === '' ? '/assets/noimage.png' : other.image" alt="No Image" class="card-img-top">
               <div class="card-body">
-                <p>{{manga.estado}}</p>
-                <p *ngIf="manga.estado == 'visto hasta' || manga.estado == 'abandone' ">Capitulo: {{manga.ultimoCapitulo}}</p>
-                <p>Descripcion: {{manga.description}}</p>
-                <p class="clasificacion" >
-                  <input id="radio1" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="5" disabled><!--
-                  --><label for="radio1">★</label><!--
-                  --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="4" disabled><!--
-                  --><label for="radio2">★</label><!--
-                  --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="3"disabled><!--
-                  --><label for="radio3">★</label><!--
-                  --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="manga.calificacion" value="2" disabled><!--
-                  --><label for="radio4">★</label><!--
-                  --><input id="radio5" type="radio" [(ngModel)]="manga.calificacion" name="estrellas" value="1"disabled><!--
-                  --><label for="radio5">★</label>
+                <p>{{other.estado}}</p>
+                <p *ngIf="other.estado == 'visto hasta' || other.estado == 'abandone' ">Capitulo: {{other.ultimoCapitulo}}</p>
+                <p>Descripcion: {{other.description}}</p>
+                <p class="clasificacion" *ngIf="other.calificacion == 5">
+                  <label name="estrellas" class=estrella>★★★★★</label>
+                </p>
+                <p class="clasificacion" *ngIf="other.calificacion == 4">
+                  <label name="estrellas" class=estrella>★★★★</label>
+                </p>
+                <p class="clasificacion" *ngIf="other.calificacion == 3">
+                  <label name="estrellas" class=estrella>★★★</label>
+                </p>
+                <p class="clasificacion" *ngIf="other.calificacion == 2">
+                  <label name="estrellas" class=estrella>★★</label>
+                </p>
+                <p class="clasificacion" *ngIf="other.calificacion == 1">
+                  <label name="estrellas" class=estrella>★</label>
                 </p>
                 <p>LO AÑADIO: {{username}}</p>
-                <p>Created At {{manga.created_at}}</p>
-                <a [routerLink]="['/manga/', manga.key]" class="btn btn-info btn-block">
-                  EDIT MANGA
-                </a>
+                <p>Created At {{other.created_at}}</p>
+
               </div>
             </div>
           </div>
