--- a/animeApp/src/app/web/components/animes-list/animes-list.component.html
+++ b/animeApp/src/app/web/components/animes-list/animes-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="container p-4">
+<mat-card class="container-fluid">
   <div *ngIf="animes == null" align="center">
     <img class="box" src="assets/load.gif"width="900" height="600">
   </div>
@@ -7,7 +7,7 @@
       <h1>No has cargado nada aun...</h1>
       <img class="box" src="assets/nosientodolor.gif"width="900" height="600">
     </div>
-    <div *ngIf="animesForUser!=null">
+    <div *ngIf="animesForUser!=null" class="row">
     <div class="col-md-4" *ngFor="let anime of animesForUser">
       <div class="card text-center">
         <div class="card-header bg-dark text-white d-flex justify-content-between align-items-center">
@@ -21,17 +21,20 @@
           <p>{{anime.estado}}</p>
           <p *ngIf="anime.estado == 'visto hasta' || anime.estado == 'abandone' ">Capitulo: {{anime.ultimoCapitulo}}</p>
           <p>Descripcion: {{anime.description}}</p>
-          <p class="clasificacion" >
-            <input id="radio1" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="5" disabled><!--
-            --><label for="radio1">★</label><!--
-            --><input id="radio2" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="4" disabled><!--
-            --><label for="radio2">★</label><!--
-            --><input id="radio3" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="3"disabled><!--
-            --><label for="radio3">★</label><!--
-            --><input id="radio4" type="radio" name="estrellas" [(ngModel)]="anime.calificacion" value="2" disabled><!--
-            --><label for="radio4">★</label><!--
-            --><input id="radio5" type="radio" [(ngModel)]="anime.calificacion" name="estrellas" value="1"disabled><!--
-            --><label for="radio5">★</label>
+          <p class="clasificacion" *ngIf="anime.calificacion == 5">
+            <label name="estrellas" class=estrella>★★★★★</label>
+          </p>
+          <p class="clasificacion" *ngIf="anime.calificacion == 4">
+            <label name="estrellas" class=estrella>★★★★</label>
+          </p>
+          <p class="clasificacion" *ngIf="anime.calificacion == 3">
+            <label name="estrellas" class=estrella>★★★</label>
+          </p>
+          <p class="clasificacion" *ngIf="anime.calificacion == 2">
+            <label name="estrellas" class=estrella>★★</label>
+          </p>
+          <p class="clasificacion" *ngIf="anime.calificacion == 1">
+            <label name="estrellas" class=estrella>★</label>
           </p>
           <p>Created At {{anime.created_at}}</p>
           <a [routerLink]="['/anime/', anime.key]" class="btn btn-info btn-block">
