--- a/animeApp/src/app/web/web-admin.component.html
+++ b/animeApp/src/app/web/web-admin.component.html
@@ -9,12 +9,14 @@
       <span class="menu-spacer"></span>
       <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-        <a  mat-button href="/AllForOne" routerLinkActive="active"><i class="fas fa-kiss-wink-heart"></i> ALL FOR ONE</a>
-        <a  mat-button href="/animes" routerLinkActive="active"><i class="fas fa-kiss-wink-heart"></i> ANIMES</a>
+        <a  mat-button href="/AllForOne" routerLinkActive="active"><i class="fas fa-glass-cheers"></i> ALL FOR ONE</a>
+        <a  mat-button href="/animes" routerLinkActive="active"><i class="fas fa-mobile-alt"></i> ANIMES</a>
         <a   mat-button href="/anime/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD ANIMES</a>
-          <a  mat-button href="/mangas" routerLinkActive="active"><i class="fas fa-book"></i> MANGAS</a>
-          <a   mat-button href="/manga/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD MANGA</a>
-          <a   mat-button (click)=logout() routerLinkActive="active"><i class="fas fa-plus-circle"></i>  LOGOUT</a>
+        <a  mat-button href="/mangas" routerLinkActive="active"><i class="fas fa-book"></i> MANGAS</a>
+        <a   mat-button href="/manga/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD MANGA</a>
+        <a  mat-button href="/dramas" routerLinkActive="active"><i class="fas fa-tv"></i> DRAMAS</a>
+        <a   mat-button href="/drama/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD DRAMA</a>
+        <a   mat-button (click)=logout() routerLinkActive="active"><i class="fas fa-plus-circle"></i>  LOGOUT</a>
       </div>
     </mat-toolbar-row>
   </mat-toolbar>
@@ -25,12 +27,14 @@
         <a class="nav-link " mat-list-item routerLink="/AllForOne" routerLinkActive="active"><i class="fas fa-kiss-wink-heart"></i> ALL FOR ONE</a>
         <a class="nav-link " mat-list-item routerLink="/animes" routerLinkActive="active"><i class="fas fa-kiss-wink-heart"></i> ANIMES</a>
         <a class="nav-link" mat-list-item routerLink="/anime/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD  ANIMES</a>
-          <a class="nav-link" mat-list-item routerLink="/mangas" routerLinkActive="active"><i class="fas fa-book"></i> MANGAS</a>
-          <a class="nav-link" mat-list-item routerLink="/manga/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD  MANGA</a>
-          <br><br><img  alt=logo src="/assets/pngocean.com (6).png" height="42" width="42" margin="20"/>
-          <br><br>
-          {{email}}
-          <a class="nav-link" mat-list-item (click)=logout() routerLinkActive="active"><i class="fas fa-plus-circle"></i>  LOGOUT</a>
+        <a class="nav-link" mat-list-item routerLink="/mangas" routerLinkActive="active"><i class="fas fa-book"></i> MANGAS</a>
+        <a class="nav-link" mat-list-item routerLink="/manga/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD  MANGA</a>
+        <a class="nav-link" mat-list-item routerLink="/dramas" routerLinkActive="active"><i class="fas fa-book"></i> DRAMAS</a>
+        <a class="nav-link" mat-list-item routerLink="/drama/null" routerLinkActive="active"><i class="fas fa-plus-circle"></i> ADD  DRAMA</a>
+        <br><br><img  alt=logo src="/assets/pngocean.com (6).png" height="42" width="42" margin="20"/>
+        <br><br>
+        {{email}}
+        <a class="nav-link" mat-list-item (click)=logout() routerLinkActive="active"><i class="fas fa-plus-circle"></i>  LOGOUT</a>
 
       </mat-nav-list>
     </mat-sidenav>
