--- a/animeApp/src/app/web/components/drama-form/drama-form.component.html
+++ b/animeApp/src/app/web/components/drama-form/drama-form.component.html
@@ -57,7 +57,7 @@
             --><label for="radio5">★</label>
           </p>
         </form>
-        <button class="btn btn-success btn-block" (click)="saveNewGame(dramaInEdition)">
+        <button class="btn btn-success btn-block" (click)="saveNewDrama(dramaInEdition)">
           Save
         </button>
       </form>
