--- a/animeApp/src/app/web/components/manga-form/manga-form.component.html
+++ b/animeApp/src/app/web/components/manga-form/manga-form.component.html
@@ -57,7 +57,7 @@
             --><label for="radio5">★</label>
           </p>
         </form>
-        <button class="btn btn-success btn-block" (click)="saveNewGame(mangaInEdition)">
+        <button class="btn btn-success btn-block" (click)="saveNewManga(mangaInEdition)">
           Save
         </button>
       </form>
