--- a/animeApp/src/app/web/components/drama-list/drama-list.component.html
+++ b/animeApp/src/app/web/components/drama-list/drama-list.component.html
@@ -3,9 +3,9 @@
     <img class="box" src="assets/drAM.gif">
   </div>
   <div *ngIf="dramas!=null" >{{loadDramas()}}
-    <div *ngIf="dramas.length === 0" align="center">
+    <div *ngIf="dramasForUser.length === 0" align="center">
       <h1>No has cargado nada aun...</h1>
-      <img class="box" src="assets/drama.gif">
+      <img class="box" src="assets/giphy (1).gif">
     </div>
     <div *ngIf="dramasForUser!=null" class="row">
     <div class="col-md-4" *ngFor="let drama of dramasForUser">
