--- a/animeApp/src/app/web/components/manga-list/manga-list.component.css
+++ b/animeApp/src/app/web/components/manga-list/manga-list.component.css
@@ -1,5 +1,5 @@
 #form {
-  width: 250px;
+  width: 150px;
   margin: 0 auto;
   height: 50px;
 }
@@ -25,19 +25,8 @@ label {
   unicode-bidi: bidi-override;
 }
 
-label:hover,
-label:hover ~ label {
+.estrella{
   color: orange;
-}
-
-input[type="radio"]:checked ~ label {
-  color: orange;
-}
-/* 1 columna para smartphones */
-.breakpoint  {
-  max-width: 100%;
-  display: inline-block;
-
 }
 
 
